deploy/data-analytics/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-analytics
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: data-analytics
      containers:
        - image: ghcr.io/nexeraprotocol/nexeraid/apps/data-analytics:placeholder
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/healthcheck
              port: 3012
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          name: data-analytics
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 384Mi
