deploy/data-analytics/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns: private
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
  name: data-analytics
  namespace: data-analytics
spec:
  ingressClassName: nginx
  rules:
    - host: example.dev
      http:
        paths:
          - backend:
              service:
                name: data-analytics
                port:
                  number: 3012
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - example.dev
      secretName: data-analytics-tls
